<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DataFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/list_entry"
        android:clickable="true">

        <Button
            android:id="@+id/f_data_btn_sendSms"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/data_fragment_btn_send_sms"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.69" />

        <TextView
            android:id="@+id/f_data_tv_contactName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/placeholder"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/f_data_btn_sendSms"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.26" />

        <TextView
            android:id="@+id/f_data_tv_contactPreferenceLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="-50dp"
            android:layout_marginTop="5dp"
            android:text="@string/data_fragment_tv_user_pref_label"
            app:layout_constraintStart_toStartOf="@+id/f_data_tv_contactName"
            app:layout_constraintTop_toBottomOf="@+id/f_data_tv_contactName" />

        <TextView
            android:id="@+id/f_data_tv_contactPreference"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/data_fragment_tv_user_pref_value"
            app:layout_constraintBottom_toBottomOf="@+id/f_data_tv_contactPreferenceLabel"
            app:layout_constraintStart_toEndOf="@+id/f_data_tv_contactPreferenceLabel" />

        <ScrollView
            android:id="@+id/scrollView2"
            android:layout_width="match_parent"
            android:layout_height="260dp"
            app:layout_constraintBottom_toBottomOf="@+id/f_data_btn_sendSms"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/f_data_tv_contactName"
            app:layout_constraintVertical_bias="0.22000003">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="10dp">

                <TextView
                    android:id="@+id/f_data_linear_tv_messageData"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="TextView" />
            </LinearLayout>
        </ScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>